--- a/src/routes/tutorialPage/tutorial.scss
+++ b/src/routes/tutorialPage/tutorial.scss
@@ -1,4 +1,4 @@
-@import '../../constants.scss';
+@import "../../constants.scss";
 
 .tutorial__container {
   color: $grayText;
@@ -8,10 +8,21 @@
   p {
     padding: 20px;
     background-color: $grayBg;
-    border-radius: 40px 40px 0 40px;
-    width: 80%;
+    border-radius: 40px;
+    width: 90%;
     margin: 40px auto 0;
     font-size: 4.6rem;
+    &::after {
+      position: absolute;
+      bottom: -10px;
+      right: 50px;
+      display: block;
+      content: "";
+      background-color: #c5c5c5;
+      transform: rotate(45deg);
+      width: 20px;
+      height: 20px;
+    }
   }
 }
 .tutorial__content {
